services/nextcloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
spec:
  ports:
    - name: http
      port: 8083
      protocol: TCP
  type: ClusterIP
  clusterIP: None
