services/nextcloud/nextcloud.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  labels:
    app: nextcloud
spec:
  replicas: 1
  strategy:
    type: Recreate 
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      tolerations:
      - key: "kubernetes.io/hostname"
        operator: "Equal"
        value: "toybox"
      securityContext:
        fsGroup: 65534
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
      - name: nextcloud
        image: linuxserver/nextcloud:31.0.9
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8083
        volumeMounts:
        - name: nginx-siteconfig
          mountPath: /defaults/nginx/site-confs/
        - name: data-nvme
          subPath: config
          mountPath: /config
        - name: data-nvme
          subPath: data
          mountPath: /data
        - name: data-hdd
          subPath: photos
          mountPath: /data/cecile/files/photos
        - name: preview
          mountPath: /data/appdata_ocxf7jgp27m7/preview
      volumes:
      - name: nginx-siteconfig
        configMap:
          name: nextcloud-nginx-siteconfig
      - name: preview
        hostPath:
          path: /opt/nextcloud/preview
          type: Directory
      - name: data-nvme
        persistentVolumeClaim:
          claimName: nextcloud-pv-claim
      - name: data-hdd
        persistentVolumeClaim:
          claimName: nextcloud-hdd-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
spec:
  selector:
    app: nextcloud
  ports:
    - name: http
      port: 8083
      protocol: TCP
  type: ClusterIP
  clusterIP: None

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud
spec:
  parentRefs:
    - name: envoy
  hostnames:
    - cloud.erebe.eu
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nextcloud
          kind: Service
          port: 8083
